@@ -8,40 +8,82 @@ package org.opensearch.sql.expression.function;
 import static org.opensearch.sql.ast.expression.Cast.getCastFunctionName;
 import static org.opensearch.sql.ast.expression.Cast.isCastFunction;
 
-import com.google.common.collect.ImmutableList;
+import com.google.common.annotations.VisibleForTesting;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
-import java.util.TreeSet;
+import java.util.function.Function;
 import java.util.stream.Collectors;
-import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang3.tuple.Pair;
 import org.opensearch.sql.common.utils.StringUtils;
 import org.opensearch.sql.data.type.ExprCoreType;
 import org.opensearch.sql.data.type.ExprType;
 import org.opensearch.sql.exception.ExpressionEvaluationException;
 import org.opensearch.sql.expression.Expression;
+import org.opensearch.sql.expression.aggregation.AggregatorFunction;
+import org.opensearch.sql.expression.datetime.DateTimeFunction;
+import org.opensearch.sql.expression.datetime.IntervalClause;
+import org.opensearch.sql.expression.operator.arthmetic.ArithmeticFunction;
+import org.opensearch.sql.expression.operator.arthmetic.MathematicalFunction;
+import org.opensearch.sql.expression.operator.convert.TypeCastOperator;
+import org.opensearch.sql.expression.operator.predicate.BinaryPredicateOperator;
+import org.opensearch.sql.expression.operator.predicate.UnaryPredicateOperator;
+import org.opensearch.sql.expression.system.SystemFunctions;
+import org.opensearch.sql.expression.text.TextFunction;
+import org.opensearch.sql.expression.window.WindowFunctions;
 
 /**
  * Builtin Function Repository.
- * Repository registers catalog specific functions under catalog specific namespace and
- * universal functions under default namespace. Catalog Specific Namespace carries their own
- * namespace.
+ * Repository registers datasource specific functions under datasource namespace and
+ * universal functions under default namespace.
  *
  */
-@RequiredArgsConstructor
 public class BuiltinFunctionRepository {
-
   public static final String DEFAULT_NAMESPACE = "default";
 
   private final Map<String, Map<FunctionName, FunctionResolver>> namespaceFunctionResolverMap;
 
+  /** The singleton instance. */
+  private static BuiltinFunctionRepository instance;
+
+  /**
+   * Construct a function repository with the given function registered. This is only used in test.
+   *
+   * @param namespaceFunctionResolverMap function supported
+   */
+  @VisibleForTesting
+  BuiltinFunctionRepository(
+      Map<String, Map<FunctionName, FunctionResolver>> namespaceFunctionResolverMap) {
+    this.namespaceFunctionResolverMap = namespaceFunctionResolverMap;
+  }
+
+  /**
+   * Get singleton instance of the function repository. Initialize it with all built-in functions
+   * for the first time in synchronized way.
+   *
+   * @return singleton instance
+   */
+  public static synchronized BuiltinFunctionRepository getInstance() {
+    if (instance == null) {
+      instance = new BuiltinFunctionRepository(new HashMap<>());
+
+      // Register all built-in functions
+      ArithmeticFunction.register(instance);
+      BinaryPredicateOperator.register(instance);
+      MathematicalFunction.register(instance);
+      UnaryPredicateOperator.register(instance);
+      AggregatorFunction.register(instance);
+      DateTimeFunction.register(instance);
+      IntervalClause.register(instance);
+      WindowFunctions.register(instance);
+      TextFunction.register(instance);
+      TypeCastOperator.register(instance);
+      SystemFunctions.register(instance);
+      OpenSearchFunctions.register(instance);
+    }
+    return instance;
+  }
 
   /**
    * Register {@link DefaultFunctionResolver} to the Builtin Function Repository
@@ -68,13 +110,13 @@ public class BuiltinFunctionRepository {
     namespaceFunctionResolverMap.get(namespace).put(resolver.getFunctionName(), resolver);
   }
 
-
   /**
    * Compile FunctionExpression under default namespace.
    *
    */
-  public FunctionImplementation compile(FunctionName functionName, List<Expression> expressions) {
-    return compile(DEFAULT_NAMESPACE, functionName, expressions);
+  public FunctionImplementation compile(FunctionProperties functionProperties,
+                                        FunctionName functionName, List<Expression> expressions) {
+    return compile(functionProperties, DEFAULT_NAMESPACE, functionName, expressions);
   }
 
 
@@ -82,16 +124,18 @@ public class BuiltinFunctionRepository {
    * Compile FunctionExpression within given namespace.
    * Checks for default namespace first and then tries to compile from given namespace.
    */
-  public FunctionImplementation compile(String namespace, FunctionName functionName,
+  public FunctionImplementation compile(FunctionProperties functionProperties,
+                                        String namespace,
+                                        FunctionName functionName,
                                         List<Expression> expressions) {
     List<String> namespaceList = new ArrayList<>(List.of(DEFAULT_NAMESPACE));
     if (!namespace.equals(DEFAULT_NAMESPACE)) {
       namespaceList.add(namespace);
     }
-    FunctionBuilder resolvedFunctionBuilder = resolve(namespaceList,
-        new FunctionSignature(functionName, expressions
-            .stream().map(expression -> expression.type()).collect(Collectors.toList())));
-    return resolvedFunctionBuilder.apply(expressions);
+    FunctionBuilder resolvedFunctionBuilder = resolve(
+        namespaceList, new FunctionSignature(functionName, expressions
+            .stream().map(Expression::type).collect(Collectors.toList())));
+    return resolvedFunctionBuilder.apply(functionProperties, expressions);
   }
 
   /**
@@ -101,11 +145,12 @@ public class BuiltinFunctionRepository {
    * So list of namespaces is also the priority of namespaces.
    *
    * @param functionSignature {@link FunctionSignature} functionsignature.
-   *
    * @return Original function builder if it's a cast function or all arguments have expected types
-   *         or other wise wrap its arguments by cast function as needed.
+   *      or otherwise wrap its arguments by cast function as needed.
    */
-  public FunctionBuilder resolve(List<String> namespaces, FunctionSignature functionSignature) {
+  public FunctionBuilder
+      resolve(List<String> namespaces,
+              FunctionSignature functionSignature) {
     FunctionName functionName = functionSignature.getFunctionName();
     FunctionBuilder result = null;
     for (String namespace : namespaces) {
@@ -124,9 +169,10 @@ public class BuiltinFunctionRepository {
     }
   }
 
-  private FunctionBuilder getFunctionBuilder(FunctionSignature functionSignature,
-                       FunctionName functionName,
-                       Map<FunctionName, FunctionResolver> functionResolverMap) {
+  private FunctionBuilder getFunctionBuilder(
+      FunctionSignature functionSignature,
+      FunctionName functionName,
+      Map<FunctionName, FunctionResolver> functionResolverMap) {
     Pair<FunctionSignature, FunctionBuilder> resolvedSignature =
         functionResolverMap.get(functionName).resolve(functionSignature);
 
@@ -136,7 +182,8 @@ public class BuiltinFunctionRepository {
     if (isCastFunction(functionName) || sourceTypes.equals(targetTypes)) {
       return funcBuilder;
     }
-    return castArguments(sourceTypes, targetTypes, funcBuilder);
+    return castArguments(sourceTypes,
+        targetTypes, funcBuilder);
   }
 
   /**
@@ -148,7 +195,7 @@ public class BuiltinFunctionRepository {
   private FunctionBuilder castArguments(List<ExprType> sourceTypes,
                                         List<ExprType> targetTypes,
                                         FunctionBuilder funcBuilder) {
-    return arguments -> {
+    return (fp, arguments) -> {
       List<Expression> argsCasted = new ArrayList<>();
       for (int i = 0; i < arguments.size(); i++) {
         Expression arg = arguments.get(i);
@@ -156,12 +203,12 @@ public class BuiltinFunctionRepository {
         ExprType targetType = targetTypes.get(i);
 
         if (isCastRequired(sourceType, targetType)) {
-          argsCasted.add(cast(arg, targetType));
+          argsCasted.add(cast(arg, targetType).apply(fp));
         } else {
           argsCasted.add(arg);
         }
       }
-      return funcBuilder.apply(argsCasted);
+      return funcBuilder.apply(fp, argsCasted);
     };
   }
 
@@ -174,13 +221,13 @@ public class BuiltinFunctionRepository {
     return sourceType.shouldCast(targetType);
   }
 
-  private Expression cast(Expression arg, ExprType targetType) {
+  private Function<FunctionProperties, Expression> cast(Expression arg, ExprType targetType) {
     FunctionName castFunctionName = getCastFunctionName(targetType);
     if (castFunctionName == null) {
       throw new ExpressionEvaluationException(StringUtils.format(
           "Type conversion to type %s is not supported", targetType));
     }
-    return (Expression) compile(castFunctionName, ImmutableList.of(arg));
+    return functionProperties -> (Expression) compile(functionProperties,
+        castFunctionName, List.of(arg));
   }
-
 }
